<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailkontak"
        android:textSize="14pt"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="107dp"
        tools:layout_editor_absoluteY="106dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:textSize="11pt"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="200dp" />

    <TextView
        android:id="@+id/tvNamaKontak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:textSize="11pt"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="256dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notel"
        android:textSize="11pt"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="348dp" />

    <TextView
        android:id="@+id/tvNomorTelepon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notel"
        android:textSize="11pt"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="406dp" />
</androidx.constraintlayout.widget.ConstraintLayout>